--- a/PXB_Cau01/app/src/main/res/layout/activity_main.xml
+++ b/PXB_Cau01/app/src/main/res/layout/activity_main.xml
@@ -80,10 +80,16 @@
 
         <Button
             android:id="@+id/button_dangnhap"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:text="đăng nhập" />
+
+        <Button
+            android:id="@+id/button_thoat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Thoát" />
 
     </LinearLayout>
 </LinearLayout>
